--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@uidotdev/usehooks": "^2.4.1",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
